# dashboard

./: .gitignore  app.py  index.py  pyproject.toml  requirements.txt
assets/: subject.html  sytle.css
pages/: home.py
pages/data_source/: eda.py
src/components/: ids.py  layout.py
