[tool.poetry]
name = "dashp"
version = "0.1.0"
description = ""
authors = ["hypeduck <hypeduck@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
dash = "^2.14.2"
jupyter-dash = "^0.4.2"
dash-bootstrap-components = "^1.5.0"
gspread = "^5.12.2"
oauth2client = "^4.1.3"
python-dotenv = "^1.0.0"
torch = "^2.1.2"
dash-ag-grid = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
